--- a/index.html
+++ b/index.html
@@ -3,12 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Personal</title>
+    <title>Home</title>
 </head>
 <body>
-    <h1>Probando Visual Studio Code</h1>
-    <h1>Mi aplicación</h1>
-    <h1>Gigey Ginori Carrascasl</h1>
+    <nav class="menu">
+        <a href="/index.html">HOME</a>
+        <a href="/about.html">SOBRE MI</a>
+        <a href="/contact.html">CONTACTO</a>
+  </nav>
+  <div>
+
+  <div style="text-align: center;"> <div><h1> G I N O R I  C A R R A S C A L   S I L V A </h1></div>
+  <div><h6>ing de Sistemas</h6></div>
+    </div>
+
+      <table>
+          <tr>
+              <th style="text-align: right;">
+                Estudiante de 9no ciclo de Ingeniería de Sistemas
+              </th>
+              <th>
+                  <img style="width: 40%;" src="./img/IMG-20181023-WA0051.jpg" alt="">
+              </th>
+              <th style="text-align: left;">
+               NOMBRE:
+               Gigey Carrascal Silva
+               Edad:
+               22
+               Resido en:
+               Cajamarca   
+              </th>
+          </tr>
+      </table>
+  </div>
+  <br>
+
+  <div style="text-align: center;">
+      <p> Gracias por tu visita! Te invito a ver toda mi página y conocer mas sobre mi</p>
+  </div>
+
+
 </body>
 
 </html>
