--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </nav>
   <div>
 
-  <div style="text-align: center;"> <div><h1> G I N O R I  C A R R A S C A L   S I L V A </h1></div>
+  <div style="text-align: center;"> <div><h1> GinoriCARRASCALSILVA</h1></div>
   <div><h6>ing de Sistemas</h6></div>
     </div>
 
