--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                 
                 </div>
                 <div>
-                    <label for="subject">Tema a tratar :</label>
+                    <label for="tema">Tema a tratar :</label>
                   <textarea id="mensaje" name="mensaje" placeholder="Deja un mensaje.." style="height:200px"></textarea>
               
                 </div>
