--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <div style="text-align: center;"><h1> SOBRE MI</h1></div> 
       <br>      
   <div  style="text-align: center;"><h3>HOBBIES</h3></div>
-  <div style="margin-block: 15%;">
+  <div>
     <table>
         <tr>
             <th>
@@ -45,19 +45,19 @@
 
   <table>
       <tr>
-          <th><div  style="text-align: center;"><h3>COMPETENCIAS</h3></div></th>
-          <th><div  style="text-align: center;"><h3>EXPERENCIAS</h3></div></th>
-          <th><div  style="text-align: center;"><h3>COMIDA FAVORITA</h3></div></th>
+          <th><div  style="text-align: center;"><strong>COMPETENCIAS</strong></div></th>
+          <th><div  style="text-align: center;"><strong>EXPERENCIAS</strong></div></th>
+          <th><div  style="text-align: center;"><strong>COMIDA FAVORITA</strong></div></th>
       </tr>
       <tr>
           <td>
             <ul>          
-              <li type="circle">Facilidad para trabajar en equipo.</li>    
-              <li type="circle">Gestion del tiempo.</li>    
-              <li type="circle">Adaptación al cambio.</li>
-              <li type="circle">Capacidad de motivación del personal.</li>    
-              <li type="circle">Persistencia y constancia para obtener el resultado.</li>    
-              <li type="circle">Máxima Creatividad</li>    
+              <li >Facilidad para trabajar en equipo.</li>    
+              <li >Gestion del tiempo.</li>    
+              <li >Adaptación al cambio.</li>
+              <li >Capacidad de motivación del personal.</li>    
+              <li >Persistencia y constancia para obtener el resultado.</li>    
+              <li >Máxima Creatividad</li>    
               </ul>
         </td>
           <td>
@@ -70,7 +70,7 @@
              <div>
                 En realidad, me gusta toda la comida del mundo. Me siento mas feliz comiendo que haciendo cualquier otra cosa asi que en vez de colocar que me gusta colocare una foto de lo que no me gusta
              
-             </div>  <img  style="width: 150px;" alt="img" src="./img/descarga (2).jpg">
+             </div>  <img  style="width: 150px;" alt="img" src="./img/olluco.jpg">
               <img  style="width: 150px;" alt="img"  src="./img/papaya-3-Exotic-500x500.jpg">
             </td>
       </tr>
