--- a/index.html
+++ b/index.html
@@ -4,44 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet"  href="./style/mihojadeestilos.css"  >
 </head>
 <body>
-    <nav class="menu">
-        <a href="/index.html">HOME</a>
-        <a href="/about.html">SOBRE MI</a>
-        <a href="/contact.html">CONTACTO</a>
-  </nav>
-  <div>
+    <head >
+       <nav >
+           <ul>
+               <li><a href="/index.html">HOME</a></li>
+               <li> <a href="/about.html">SOBRE MI</a></li>
+                <li><a href="/contact.html">CONTACTO</a></li>
+           </ul>
+        </nav> 
+    </head>
 
-  <div style="text-align: center;"> <div><h1> GinoriCARRASCALSILVA</h1></div>
-  <div><h6>ing de Sistemas</h6></div>
-    </div>
+    <!--div-->
+        <div class="row">
+          <div  class="col-5" id=fondo>
+              <article id="partesupfondo">
+                <h5 class="nombre">Hola,Soy</h5>
+                <h1 class="nombre">Ginori</h1> 
+                <h5 class="nombre">Estudiante de Ingeniería de Sistemas </h5>
+                <h5 class="nombre">Cajamarca</h5>
+                <h5 class="nombre">22 años</h5>
+              </article>
+              
+          </div>
+          <div class="col-7" >            
+            <img src="./img/17972189_1385287831514437_6295941999919840213_o.jpg" class="img-fluid" alt="Responsive image">
+            <div class="container" id="centrar">
+                <p class="cita">Sólo se vive una vez, pero si lo haces bien, una vez es más que suficiente (Mae West / Actriz)</p>
+            </div>
+        </div>
+       
+        </div>
+ 
+      </br>
 
-      <table>
-          <tr>
-              <th style="text-align: right;">
-                Estudiante de 9no ciclo de Ingeniería de Sistemas
-              </th>
-              <th>
-                  <img style="width: 40%;" src="./img/IMG-20181023-WA0051.jpg" alt="">
-              </th>
-              <th style="text-align: left;">
-               NOMBRE:
-               Gigey Carrascal Silva
-               Edad:
-               22
-               Resido en:
-               Cajamarca   
-              </th>
-          </tr>
-      </table>
-  </div>
-  <br>
-
-  <div style="text-align: center;">
-      <p> Gracias por tu visita! Te invito a ver toda mi página y conocer mas sobre mi</p>
-  </div>
-
+  <footer>
+    <article id="partesupfondo2">
+        <a class="icons1" href="https://www.linkedin.com/in/gigey-carrascal-5a5051186/"><i class="fa fa-linkedin-square"></i></a> 
+        <a class="icons1" href=""><i  href="" class="fa fa-facebook"></i></a>
+        <a class="icons1" href=""><i  class="fa fa-twitter"></i></a>
+      </article>
+  </footer>
 
 </body>
 
