--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                   </div>      
                   </div>
                 <div class="col-5" id="fondoform">
-                  <img height="100%" src="./img/82531761_166899321269723_3876182483800853014_n.jpg" class="img-fluid" alt="Responsive image">
+                  <img src="./img/82531761_166899321269723_3876182483800853014_n.jpg" class="img-fluid" alt="Responsive image">
                 </div>
               </div>
         </div>
