--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
             </div>
             </div>
         <br>
-        </div>
 
         
         <!--CREAR TODO JUNTO-->
@@ -144,7 +143,7 @@
             <br>
             </div>
             <section class="sectionabout">
-
+                    <h3 class="titulo"></h3>
                 <article>
                     <h3 class="titulo">COMPETENCIAS</h3>
                     <div>
@@ -213,36 +212,36 @@
                 <div class=" personas contenedor">
                     <article class="persona__columna">
                         <img  class="img-full" alt="Responsive image" src="./img/lugares/tailandia.jpg">
-                        <em>Tailandia</em>
+                        <h6><em>Tailandia</em></h6>
                        
                     </article>
                     <article class="persona__columna">
                         <img   class="img-fluid" alt="Responsive image" src="./img/lugares/mexico.jpg">
-                        <em>México</em>
+                        <h6><em>México</em></h6>
                     </article>
                     <article class="persona__columna">
                         <img   class="img-fluid"alt="Responsive image" src="./img/lugares/venezuela.jpg">
-                        <em>Venezuela</em>
+                        <h6><em>Venezuela</em></h6>
                     </article>
                     <article class="persona__columna">
                         <img   class="img-fluid" alt="Responsive image" src="./img/lugares/noruega.jpg">
-                        <em>Noruega</em>
+                        <h6><em>Noruega</em></h6>
                     </article>
                     <article class="persona__columna">
                         <img   class="img-fluid" alt="Responsive image" src="./img/lugares/japon.jpg">
-                        <em>Japón</em>
+                        <h6><em>Japón</em></h6>
                     </article>
                     <article class="persona__columna">
                         <img   class="img-fluid" alt="Responsive image" src="./img/lugares/argentina.jpg">
-                        <em>Argentina</em>
+                        <h6><em>Argentina</em></h6>
                     </article>
                     <article class="persona__columna">
                         <img   class="img-fluid" alt="Responsive image" src="./img/lugares/egipto.jpg">
-                        <em>Egipto</em>
+                        <h6><em>Egipto</em></h6>
                     </article>
                     <article class="persona__columna">
                         <img   class="img-fluid" alt="Responsive image" src="./img/lugares/salar-de-uyuni.jpg">
-                        <em>Bolivia</em>
+                        <h6><em>Bolivia</em></h6>
                     </article>
                 </div>
             <br>
@@ -283,8 +282,8 @@
   <footer>
     <article id="partesupfondo2">
         <a class="icons1" href="https://www.linkedin.com/in/gigey-carrascal-5a5051186/"><i class="fa fa-linkedin-square"></i></a> 
-        <a class="icons1" href=""><i  href="" class="fa fa-facebook"></i></a>
-        <a class="icons1" href=""><i  class="fa fa-twitter"></i></a>
+        <a class="icons1" href="https://www.facebook.com/Gigeey"><i  href="" class="fa fa-facebook"></i></a>
+        <a class="icons1" href="#"><i  class="fa fa-twitter"></i></a>
     </article>
       <p>© 2020 . All rights reserved | Designed by GinoriCarrascal</p>
   </footer>
