--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="col-2">
                     <strong class="titulo">MAQUILLAJE</strong>
                 <p>Desde pequeña me llamó mucho la atención el mundo del maquillaje y realice un emprendimiento del mismo</p>
-                <a id="boton1" href="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F1042928419089096%2Fvideos%2F2555382398073095%2F&show_text=0&width=560"> Ver video</a> 
+                <a class="boton1" href="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F1042928419089096%2Fvideos%2F2555382398073095%2F&show_text=0&width=560"> Ver video</a> 
 
                 </div>
                 <div class="col-2">
@@ -143,7 +143,6 @@
             <br>
             </div>
             <section class="sectionabout">
-                    <h3 class="titulo"></h3>
                 <article>
                     <h3 class="titulo">COMPETENCIAS</h3>
                     <div>
@@ -220,7 +219,7 @@
                         <h6><em>México</em></h6>
                     </article>
                     <article class="persona__columna">
-                        <img   class="img-fluid"alt="Responsive image" src="./img/lugares/venezuela.jpg">
+                        <img   class="img-fluid" alt="Responsive image" src="./img/lugares/venezuela.jpg">
                         <h6><em>Venezuela</em></h6>
                     </article>
                     <article class="persona__columna">
@@ -269,7 +268,7 @@
                               <textarea id="mensaje" class="field" style="height:100px"></textarea><br>
                               
                               <p class="center-content">
-                                  <input type="submit" value="ENVIAR" id="boton1">                                
+                                  <input type="submit" value="ENVIAR" class="boton1">                                
                               </p>
                           </form>
                   </div>      
@@ -282,7 +281,7 @@
   <footer>
     <article id="partesupfondo2">
         <a class="icons1" href="https://www.linkedin.com/in/gigey-carrascal-5a5051186/"><i class="fa fa-linkedin-square"></i></a> 
-        <a class="icons1" href="https://www.facebook.com/Gigeey"><i  href="" class="fa fa-facebook"></i></a>
+        <a class="icons1" href="https://www.facebook.com/Gigeey"><i class="fa fa-facebook"></i></a>
         <a class="icons1" href="#"><i  class="fa fa-twitter"></i></a>
     </article>
       <p>© 2020 . All rights reserved | Designed by GinoriCarrascal</p>
