--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito">    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico">
     <link rel="stylesheet"  href="./style/estilopersonal.css"  >
+    <link rel="icon" type="image/png" href="./img/Logo.png" />
 </head>
 <body>
     <div id="main-header">
-    <header  >
-        <nav >
-            <ul>
-                <li><a href="#home">HOME</a></li>
-                <li> <a href="#sobreMi">SOBRE MI</a></li>
-                    <li><a href="#contacto">CONTACTO</a></li>
-            </ul>
-            </nav> 
-        </header >
+        <header>
+            <nav class="navegacion">
+                <ul class="menuul">
+                    <li><a href="/index.html#home">HOME</a></li>
+                    <li> <a href="/index.html#sobreMi">SOBRE MI</a></li>
+                    <li><a href="#">CARTAS</a>
+                        <ul class="submenu">
+                            <li><a href="/carta05.html">Carta 05</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="/index.html#contacto">CONTACTO</a></li>
+                </ul>
+            </nav>
+        </header>
     </div>
     
         <div id="home">
@@ -279,12 +285,13 @@
               </div>
         </div>
   <footer>
-    <article id="partesupfondo2">
+        <div id="partesupfondo2">
         <a class="icons1" href="https://www.linkedin.com/in/gigey-carrascal-5a5051186/"><i class="fa fa-linkedin-square"></i></a> 
         <a class="icons1" href="https://www.facebook.com/Gigeey"><i class="fa fa-facebook"></i></a>
         <a class="icons1" href="#"><i  class="fa fa-twitter"></i></a>
-    </article>
-      <p>© 2020 . All rights reserved | Designed by GinoriCarrascal</p>
+        </div>
+        <p>© 2020 . All rights reserved | Designed by GinoriCarrascal</p>
+   
   </footer>
 
 </body>
