--- a/carta05.html
+++ b/carta05.html
@@ -30,7 +30,7 @@
         <div class="topfloreado"></div>
         <div class="escritura">
             <div class="membrete">
-                <b><p>CARRASCAL SILVA GIGEY GINORI</p></b>
+                <b>CARRASCAL SILVA GIGEY GINORI</b>
                 <p>Facultad de Ingeniería</p>
                 <p>Universidad Nacional de Cajamarca</p>
                 <p>Cajamarca, Dos de mayo 736</p>
@@ -43,14 +43,14 @@
             </div>
             <div class="destinatario">
                 <b>
-                    <p>Ing . VALENCIA CASTILLO EDWIN ALBERTO</p>
+                    Ing . VALENCIA CASTILLO EDWIN ALBERTO
                 </b>
                 <p>Cajamarca, Calle Sin nombre 123</p>
                 <p>Perú</p>
                 <br>
                 <br>
             </div>
-            <h3 class="asunto">Asunto: Cronograma de actividades semana sistémica 2021</h2>
+            <h3 class="asunto">Asunto: Cronograma de actividades semana sistémica 2021</h3>
             <br>
             <br>
             <div class="cuerpo">
@@ -78,32 +78,30 @@
                 <p>Presentamos 3 cursos, que hemos conseguido de Universidades del habla hispana</p>
                 <div class="listas">
                   <ol >
-                    <li class="Lista_ordenada"><b><i>CURSO: Visualización de Datos y Storytelling</i></b></li>
-                    <p><ul>
+                    <li class="Lista_ordenada"><b><i>CURSO: Visualización de Datos y Storytelling</i></b>
+                    <ul>
                         <li>» Descripción: Aprende en este curso en línea que es la visualización de datos, sus usos; los elementos que la conforman y la forma de poder utilizarla para el apoyo en la toma de las mejores decisiones para las empresas basadas en el análisis de datos.
                        </li>
                        <li>» Creada por: Tecnológico de Monterrey</li>
                        <li>» Duración: 4 semanas</li>
                     </ul>
-                    </p>
-                    <br>
-                    <li class="Lista_ordenada"><b><i>CURSO: Gobernanza de datos personales en la era digital</i></b></li>
-                    <p>
+                    </li>
+                    <li class="Lista_ordenada"><b><i>CURSO: Gobernanza de datos personales en la era digital</i></b>
+                    
                         <ul>
                             <li>» Descripción: Aprende qué es la gobernanza de datos personales y desarrolla habilidades para diseñar e implementar leyes y políticas públicas en materia de datos personales en la era digital.</li>
                             <li>» Creada por: Pontificia Universidad Javeriana</li>
                             <li>» Duración: 4 semanas</li>
                         </ul>
-                        </p>
-                        <br>
-                    <li class="Lista_ordenada"><b><i>CURSO:Fundamentos TIC para profesionales de negocios:</i></b></li>
-                    <p><ul>
+                        
+                        <br></li>
+                    <li class="Lista_ordenada"><b><i>CURSO:Fundamentos TIC para profesionales de negocios:</i></b>
+                    <ul>
                         <li> » Descripción: ¿Tienes que trabajar con las Tecnologías de la Información y te faltan conocimientos? Conoce los fundamentos de la programación software
                        </li>
                        <li>» Creada por: Universitat Politècnica de Valencia</li>
                        <li> » Duración: 4 semanas</li>
-                    </ul>
-                    </p>
+                    </ul></li>
                 </ol>  
                 </div>
                 <br>
