--- a/carta05.html
+++ b/carta05.html
@@ -7,13 +7,17 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito">   
-    
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <link rel="stylesheet"  href="./style/a.css"  > 
-    <link rel="stylesheet"  href="./style/carta.css"  >
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     
+    <link rel="stylesheet"  href="./style/carta.css"  >
+    <link rel="stylesheet"  href="./style/a.css"  > 
+
     <link rel="icon" type="image/png" href="./img/carta.png" />
 
 </head>
@@ -26,9 +30,9 @@
                  <span class="material-icons" id="sing-two">clear</span>
             </label>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#hobbies">Sobre Mi</a></li>
-                <li><a href="#Contacto">Contacto</a></li>
+                <li><a href="/index.html#home">Home</a></li>
+                <li><a href="/index.html#hobbies">Sobre Mi</a></li>
+                <li><a href="/index.html#Contacto">Contacto</a></li>
                 <li class="dropdown">
                   <a class="dropdown-toggle" href="#" id="navbardrop">
                     Carta
