--- a/index.html
+++ b/index.html
@@ -80,22 +80,22 @@
             <input type="checkbox" id="btn-social">
             <label for="btn-social" class="icon-play-1">&raquo;</label>
                 <div class="icon-social">
-                    <a href="#" class="icon-facebook fa fa-facebook-f">
+                    <a href="https://www.facebook.com/Gigeey" class="icon-facebook fa fa-facebook-f" target="_blank">
                         <span class="title">Facebook</span>
                     </a>
-                    <a href="#" class="icon-youtube fa fa-youtube">
+                    <a href="#" class="icon-youtube fa fa-youtube" target="_blank">
                         <span class="title">Youtube</span>
                     </a>
-                    <a href="#" class="icon-twitter fa fa-twitter">
+                    <a href="#" class="icon-twitter fa fa-twitter" target="_blank">
                         <span class="title">Twitter</span>
                     </a>
-                    <a href="#" class="icon-correo fa fa-github">
+                    <a href="https://github.com/GygeyCarrascal/GygeyCarrascal.github.io" class="icon-correo fa fa-github" target="_blank">
                         <span class="title">Github</span>
                     </a>
-                    <a href="#" class="icon-pinterest fa fa-pinterest">
+                    <a href="" class="icon-pinterest fa fa-pinterest" target="_blank">
                         <span class="title">Pinterest</span>
                     </a>
-                    <a href="#" class="icon-google fa fa-instagram">
+                    <a href="https://www.instagram.com/ginoricarrascal/" class="icon-google fa fa-instagram" target="_blank">
                         <span class="title">Instagram</span>
                     </a>
                 </div>
@@ -532,8 +532,8 @@
                             <div class="col-12 col-md-6">
                                 <div class="footer-social">
                                     <ul class="flex justify-content-center justify-content-md-end align-items-center">
-                                        <li><a  href="https://www.linkedin.com/in/gigey-carrascal-5a5051186/"><i class="fa fa-linkedin-square"></i></a></li>
-                                        <li><a  href="https://www.facebook.com/Gigeey"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a  href="https://www.linkedin.com/in/gigey-carrascal-5a5051186/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                                        <li><a  href="https://www.facebook.com/Gigeey"><i class="fa fa-facebook" target="_blank"></i></a></li>
                                         <li><a  href=""><i  class="fa fa-twitter"></i></a></li>                                        
                                     </ul>
                                 </div>
