--- a/carta05.html
+++ b/carta05.html
@@ -32,7 +32,8 @@
             <ul>
                 <li><a href="/index.html#home">Home</a></li>
                 <li><a href="/index.html#hobbies">Sobre Mi</a></li>
-                <li><a href="/index.html#Contacto">Contacto</a></li>
+                <li><a href="/index.html#Contacto">Contacto</a></li>                
+                <li><a href="/lab07.html">Lab 07</a></li>
                 <li class="dropdown">
                   <a class="dropdown-toggle" href="#" id="navbardrop">
                     Carta
