--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="#hobbies">Sobre Mi</a></li>
                         <li><a href="#Contacto">Contacto</a></li>
+                        <li><a href="/lab07.html">Lab 07</a></li>
                         <li class="dropdown">
                           <a class="dropdown-toggle" href="#" id="navbardrop">
                             Carta
@@ -47,7 +48,8 @@
                           <div class="dropdown-menu">
                             <a class="dropdown-item" href="/carta05.html">Carta05</a>
                           </div>
-                        </li>										
+                        </li>
+
                     </ul>                   
                 </nav>
                 <div class="banner-area">
@@ -544,19 +546,7 @@
             </div>
         </footer>
 
-        <script type="text/javascript">
-            // Call carousel manually
-            $('#myCarouselCustom').carousel();
-            
-            // Go to the previous item
-            $("#prevBtn").click(function(){
-                $("#myCarouselCustom").carousel("prev");
-            });
-            // Go to the previous item
-            $("#nextBtn").click(function(){
-                $("#myCarouselCustom").carousel("next");
-            });
-            </script>
+        <script type="text/javascript" src="./js/javascrip.js"> </script>
     </body>
   
 </html>
