--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         <li><a href="#hobbies">Sobre Mi</a></li>
                         <li><a href="#Contacto">Contacto</a></li>
                         <li><a href="/lab07.html">Lab 07</a></li>
+                        <li><a href="/practicanoviembre/carrascal.html">Carrascal practica</a></li>
                         <li class="dropdown">
                           <a class="dropdown-toggle" href="#" id="navbardrop">
                             Carta
