--- a/practicanoviembre/carrascal.html
+++ b/practicanoviembre/carrascal.html
@@ -89,7 +89,8 @@
                     <div class="col-sm-4"> </div>
                     <div class="col-sm-2 alinearder"> <a id="iconbook3"><span class="material-icons backrosa">bookmark_border </span></a> </div>
                 </div> 
-                <img src="./img/turismo.jpg" id="imagenaborrar" alt="Responsive image" class="img-fluid"> 
+                <div id="imagenaborrar"><img src="./img/turismo.jpg"  alt="Responsive image" class="img-fluid"> </div>
+                
               
                 <br>
                 <p><b>Reapertura de fronteras: hoy inicia la reactivacion del cicuito turístico regional</b></p>
