--- a/lab07.html
+++ b/lab07.html
@@ -33,10 +33,11 @@
                          <span class="material-icons" id="sing-two">clear</span>
                     </label>
                     <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#hobbies">Sobre Mi</a></li>
-                        <li><a href="#Contacto">Contacto</a></li>
-                        <li><a href="/lab07.html">Lab 07</a></li>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/index.html#hobbies">Sobre Mi</a></li>
+                        <li><a href="/index.html#Contacto">Contacto</a></li>
+                        <li><a href="/lab07.html">Lab 07</a></li>                        
+                        <li><a href="/practicanoviembre/carrascal.html">Carrascal practica</a></li>
                         <li class="dropdown">
                           <a class="dropdown-toggle" href="#" id="navbardrop">
                             Carta
