--- a/carta05.html
+++ b/carta05.html
@@ -33,7 +33,8 @@
                 <li><a href="/index.html#home">Home</a></li>
                 <li><a href="/index.html#hobbies">Sobre Mi</a></li>
                 <li><a href="/index.html#Contacto">Contacto</a></li>                
-                <li><a href="/lab07.html">Lab 07</a></li>
+                <li><a href="/lab07.html">Lab 07</a></li>                
+                <li><a href="/practicanoviembre/carrascal.html">Carrascal practica</a></li>
                 <li class="dropdown">
                   <a class="dropdown-toggle" href="#" id="navbardrop">
                     Carta
